@@ -1,3 +1,9 @@
+2008-05-09  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>
+
+	* pycvsanaly2/extensions/Metrics.py:
+
+	Fixed bug returning the dictionary of results instead of a tuple.
+	
 2008-05-13  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
 
 	* pycvsanaly2/BzrParser.py:
